--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       
       <hr>
       <footer>
-        <p>&copy; 2017 Exelis Visual Information Solutions, Inc.</p>
+        <p>&copy; 2018 Harris Geospatial Solutions, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
